--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="container">
     <div class="lists">
       <h2>To-Do Lists</h2>
+      <button id="add-list">Add List</button>
       <ul id="lists-container">
         <!-- Lists will be added here -->
       </ul>
