MongoDb connection, addNewList

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h2>To-Do Lists</h2>
       <button id="add-list">Add List</button>
       <ul id="lists-container">
-        <!-- Lists will be added here -->
+        <!-- Lists added here -->
       </ul>
     </div>
 
@@ -20,7 +20,7 @@
       <h2>Tasks</h2>
       <button id="add-task">Add Task</button>
       <ul id="tasks-container">
-        <!-- Tasks will be added here -->
+        <!-- Tasks added here -->
       </ul>
     </div>
   </div>
