Possible to Edit Lists

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="lists">
       <h2>To-Do Lists</h2>
       <button id="add-list">Add List</button>
+      <button id="edit-list">Edit List</button>
+      <button id="delete-list">Delete List</button>
       <ul id="lists-container">
         <!-- Lists added here -->
       </ul>
