--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div class="tasks">
       <h2>Tasks</h2>
       <button id="add-task">Add Task</button>
+      <button id="edit-task">Edit Task</button>
+      <button id="delete-task">Delete Task</button>
       <ul id="tasks-container">
         <!-- Tasks added here -->
       </ul>
